[gd_scene load_steps=7 format=2]

[ext_resource path="res://Objects/Option/Option.gd" type="Script" id=1]
[ext_resource path="res://Objects/Option/SubOption/SubOption.tscn" type="PackedScene" id=2]
[ext_resource path="res://Objects/Option/OptionButton/OptionButton.tscn" type="PackedScene" id=3]
[ext_resource path="res://Objects/Option/Controls/Controls.tscn" type="PackedScene" id=4]

[sub_resource type="Shader" id=1]
code = "shader_type canvas_item;

uniform float lod = 0.0;

void fragment() {
	COLOR.rgb = textureLod(SCREEN_TEXTURE, SCREEN_UV, lod).rgb - vec3(0.2,0.2,0.2);
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/lod = 1.0

[node name="Option" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="Blur" type="ColorRect" parent="."]
visible = false
material = SubResource( 2 )
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScrollContainer" type="ScrollContainer" parent="."]
visible = false
margin_left = 79.0
margin_top = 41.0
margin_right = 1206.0
margin_bottom = 619.0
rect_clip_content = false
follow_focus = true
scroll_horizontal_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="VBoxContainer" parent="ScrollContainer"]
margin_right = 1127.0
margin_bottom = 818.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Graphics" parent="ScrollContainer/Options" instance=ExtResource( 2 )]
margin_right = 1115.0
margin_bottom = 86.0

[node name="FullScreen" parent="ScrollContainer/Options" instance=ExtResource( 3 )]
margin_top = 90.0
margin_right = 1115.0
margin_bottom = 163.0
text = "FULL SCREEN"
max_value = 1

[node name="Audio" parent="ScrollContainer/Options" instance=ExtResource( 2 )]
margin_top = 167.0
margin_right = 1115.0
margin_bottom = 253.0
text = "AUDIO"

[node name="Music" parent="ScrollContainer/Options" instance=ExtResource( 3 )]
margin_top = 257.0
margin_right = 1115.0
margin_bottom = 330.0
text = "MUSIC"
value = 5
max_value = 10

[node name="SFX" parent="ScrollContainer/Options" instance=ExtResource( 3 )]
margin_top = 334.0
margin_right = 1115.0
margin_bottom = 407.0
text = "SFX"
max_value = 10

[node name="Controls" parent="ScrollContainer/Options" instance=ExtResource( 2 )]
margin_top = 411.0
margin_right = 1115.0
margin_bottom = 497.0
text = "Controls"

[node name="Keyboard" parent="ScrollContainer/Options" instance=ExtResource( 3 )]
margin_top = 501.0
margin_right = 1115.0
margin_bottom = 574.0
text = "Keyboard"

[node name="Gamepad" parent="ScrollContainer/Options" instance=ExtResource( 3 )]
margin_top = 578.0
margin_right = 1115.0
margin_bottom = 651.0
text = "Gamepad"

[node name="SubOption" parent="ScrollContainer/Options" instance=ExtResource( 2 )]
margin_top = 655.0
margin_right = 1115.0
margin_bottom = 741.0
text = ""

[node name="Back" parent="ScrollContainer/Options" instance=ExtResource( 3 )]
margin_top = 745.0
margin_right = 1115.0
margin_bottom = 818.0
text = "BACK"

[node name="Keyboard" parent="." instance=ExtResource( 4 )]
layer = 5
gamepad = 0

[node name="Gamepad" parent="." instance=ExtResource( 4 )]
layer = 5
[connection signal="pressed" from="ScrollContainer/Options/Keyboard" to="." method="_on_Keyboard_pressed"]
[connection signal="pressed" from="ScrollContainer/Options/Gamepad" to="." method="_on_Gamepad_pressed"]
[connection signal="pressed" from="ScrollContainer/Options/Back" to="." method="_on_Back_pressed"]
